; ModuleID = '/home/carl/AnghaBench/linux/net/bluetooth/extr_hci_request.c_interleaved_discov.c'
source_filename = "/home/carl/AnghaBench/linux/net/bluetooth/extr_hci_request.c_interleaved_discov.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hci_request = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@DISCOV_BREDR_INQUIRY_LEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hci_request*, i64)* @interleaved_discov to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @interleaved_discov(%struct.hci_request* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.hci_request*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store %struct.hci_request* %0, %struct.hci_request** %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load %struct.hci_request*, %struct.hci_request** %4, align 8
  %8 = getelementptr inbounds %struct.hci_request, %struct.hci_request* %7, i32 0, i32 0
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @BT_DBG(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 %11)
  %13 = load %struct.hci_request*, %struct.hci_request** %4, align 8
  %14 = load i64, i64* %5, align 8
  %15 = call i32 @active_scan(%struct.hci_request* %13, i64 %14)
  store i32 %15, i32* %6, align 4
  %16 = load i32, i32* %6, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %2
  %19 = load i32, i32* %6, align 4
  store i32 %19, i32* %3, align 4
  br label %24

20:                                               ; preds = %2
  %21 = load %struct.hci_request*, %struct.hci_request** %4, align 8
  %22 = load i32, i32* @DISCOV_BREDR_INQUIRY_LEN, align 4
  %23 = call i32 @bredr_inquiry(%struct.hci_request* %21, i32 %22)
  store i32 %23, i32* %3, align 4
  br label %24

24:                                               ; preds = %20, %18
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @BT_DBG(i8*, i32) #1

declare dso_local i32 @active_scan(%struct.hci_request*, i64) #1

declare dso_local i32 @bredr_inquiry(%struct.hci_request*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
